--- a/Apptakecare/pom.xml
+++ b/Apptakecare/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.ifpe.web3</groupId>
-	<artifactId>praitica05</artifactId>
+	<artifactId>apptakecare</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>praitica05</name>
+	<name>apptakecare</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
